<resources>
    <string name="app_name">Feminae_Project</string>
    <string name="welcome">Welcome Back! Please login to your account</string>
    <string name="phoneno">Phone No</string>
    <string name="password">Password</string>
    <string name="dha">Don\'t have account yet?</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="fp">Forgot Password?</string>
    <string name="Welcome">Welcome</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="dob">DOB</string>
    <string name="ar">Already registered?</string>
    <string name="lh">Login here</string>
    <string name="reset">Reset</string>
    <string name="gb">Go Back</string>
    <string name="fem">Feminae</string>
    <string name="PT">Period Tracker</string>
    <string name="PGT">Pregnancy Tracker</string>
    <string name="IC">Infant Care</string>
    <string name="BF">Beauty and Fitness</string>
    <string name="logout">Logout</string>
    <string name="mp">My Profile</string>
    <string name="cp">Change Password</string>
    <string name="save">Save</string>
    <string name="edit">edit</string>
    <string name="q1">When did you have your last period start?</string>
    <string name="q2">On average how long is your period?</string>
    <string name="q3">On average how long is your cycle?</string>
    <string name="mc">My Cycle</string>
    <string name="pd">Period Day</string>
    <string name="fert">Fertility</string>
    <string name="pms">PMS</string>
    <string name="track">Tracker</string>
    <string name="diet">Diet</string>
    <string name="idk">I dont remember </string>
    <string name="day">Days</string>
    <string name="hello">Hello!</string>
    <string name="ques">Select your gestational age</string>
    <string name="weeks">Weeks</string>
    <string name="baby">Baby</string>
    <string name="mom">Mom</string>
    <string name="food">Food</string>
    <string name="advice">Advice</string>
    <string name="mga">My gestational age</string>
    <string name="dd">Due date</string>
    <string name="ms">My baby is the size of</string>
    <string name="mb">Moms body</string>
    <string name="con">continue</string>
    <string name="due">Estimated due month </string>
    <string name="next">NEXT</string>
    <string name="month1_info">month 1</string>
    <string name="month2_info">month2</string>
    <string name="tuab">Tell us a little about your baby</string>
    <string name="add">Add Baby info</string>
    <string name="bname">What is your baby\'s name?</string>
    <string name="bsex">What is your baby\'s sex?</string>
    <string name="bdob">What is your baby\'s birthday?</string>
    <string name="done">Done</string>
    <string name="bn">Baby\'s name</string>
    <string name="ba">Baby\'s age</string>
    <string name="feed">Feeding</string>
    <string name="sleep">Sleeping</string>
    <string name="vacc">Vaccination</string>
    <string name="care">Care</string>
    <string name="tl">Today\'s logs</string>
    <string name="milk">Milk</string>
    <string name="solids">Solids</string>
    <string name="dof">Date of Feeding</string>
    <string name="bt">Begin Time</string>
    <string name="et">End Time</string>
    <string name="tof">Time of Feeding</string>
    <string name="esg">Enter the solid given</string>
    <string name="addreac">Add a reaction</string>
    <string name="date">Date</string>
    <string name="av">Age Vaccine</string>
    <string name="birth"> Birth</string>
    <string name="Sixw">6 weeks</string>
    <string name="tenw">10 weeks</string>
    <string name="fourtw">14 weeks</string>
    <string name="sixm">6 months</string>
    <string name="ninem">9 months</string>
    <string name="ntm">9 to 12 months</string>
    <string name="twem">12 months</string>
    <string name="bcg">BCG</string>
    <string name="hepb">Hep B</string>
    <string name="opv">OPV</string>
    <string name="ipv">IPV</string>
    <string name="hib">HIB</string>
    <string name="rotav">Rota V</string>
    <string name="pcv">PCV</string>
    <string name="mmr">MMR</string>
    <string name="typhoid">Typhoid</string>
    <string name="hepa">Hep A</string>
    <string name="dtp">DTP</string>
    <string name="up">Update</string>
    <string name="hi">What seems impossible today will become your warm-up tomorrow!!!</string>
    <string name="lets">Let\'s Start</string>
    <string name="bea">Beauty</string>
    <string name="fit">Fitness</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sc1">To maintain healthy skin, dermatologists recommend the following tips:</string>
    <string name="sc2">1. Wear sunscreen daily: Sunscreen is one of the single most important things you can do for your skin. When applied correctly, sunscreen protects your skin against the sun’s harmful ultraviolet (UV) rays, which cause sunburn, skin cancer, and premature skin aging, like wrinkles and age spots. For the best protection, apply a broad-spectrum, water-resistant sunscreen with an SPF of 30 or higher to all skin not covered by clothing, and reapply every two hours or after swimming or sweating. To save time in your skin care routine, you can consider using a moisturizer that also contains sunscreen. However, while cosmetics that contain sunscreen are convenient, remember to reapply them in order to achieve the best sun protection. Keep in mind that since no sunscreen can block 100% of the sun’s UV rays, it’s also important to seek shade and wear sun-protective clothing when outdoors, including a ligthweight long-sleeved shirt, pants, a wide-brimmed hat and sunglasses with UV protection, when possible. For more effective sun protection select clothing with an ultraviolet protection factor (UPF) label.</string>
    <string name="sc3">2. Stay out of tanning beds: Just like the sun, tanning beds emit harmful UV radiation that causes skin cancer. In fact, even one indoor tanning session can increase your risk of developing melanoma by 20%, squamous cell carcinoma by 67% and basal cell carcinoma by 29%. If you want that golden glow, achieve it with self-tanning products instead. When applied correctly, self-tanners look natural and won’t give you orange skin, streaks or splotches.</string>
    <string name="sc4">3. Simplify your skin care routine: Less is more when it comes to skin care. Using too many products, especially multiple anti-aging products, can irritate your skin. Instead, focus on the basics, such as a gentle cleanser, sunscreen, and moisturizer. Establish morning and nighttime skin care routines that work well for your skin, and stick with them.</string>
    <string name="sc5">4. Choose skin care products formulated for your skin type: Understanding your skin type will help you learn how to take care of your skin and select skin care products that are right for you. As mentioned above, here\'s how to identify and understand your skin type:</string>
    <string name="sc6">a. Sensitive skin: May sting or burn after product use</string>
    <string name="sc7">b. Normal skin: Clear and not sensitive</string>
    <string name="sc8">c. Dry skin: Flaky, itchy or rough</string>
    <string name="sc9">d. Combination skin: Dry in some areas and oily in others</string>
    <string name="sc10">e.Oily: Shiny and greasy</string>
    <string name="sc11">5. Treat your lips: Since skin cancer can form on the lips, apply a lip balm or lipstick that contains sunscreen with an SPF of 30 or higher before going outdoors. If your lips feel chapped or dry, apply petroleum jelly for added moisture.</string>
    <string name="sc12">6. Keep your hands off your face: Whenever you touch your face, you transfer dirt, germs, and oil from your hands to your face. Do your best to leave your skin alone throughout the day. Avoid picking, popping or squeezing pimples, as this can cause scarring.</string>
    <string name="sc13">7. Check your skin regularly: Skin cancer is the most common cancer in the U.S., affecting one in five Americans in their lifetime. Further, nearly 20 Americans die from melanoma, the deadliest form of skin cancer, every day. However, when detected early, skin cancer—including melanoma—is highly treatable. In fact, the five-year survival rate for people whose melanoma is detected and treated before it spreads to the lymph nodes is 98%. It is important to check your skin regularly for new spots, spots that are different from other spots on your body, or moles that itch, bleed or change color, as these are often early warning signs of skin cancer. If you notice any suspicious spots, make an appointment to see a board-certified dermatologist.</string>
    <string name="sc14">The skin is your body\’s largest organ, so it\’s important to take good care of it. If you have questions about your skin type or how to take care of your skin, talk to a dermatologist.</string>
    <string name="h1">How you wash your hair and the products you use can go a long way toward maintaining smooth, shiny hair. Follow these simple tips from dermatologists to maintain healthy hair.</string>
    <string name="h2">1. Wash oily hair more frequently: How often you wash your hair should be based on how much oil your scalp produces.</string>
    <string name="h3">a. If your scalp is oily, you may need to wash it as often as once a day.</string>
    <string name="h4">b. If you have chemically treated hair, your hair may be drier, so you may want to wash it less frequently.</string>
    <string name="h5">c. As you get older, your scalp makes less oil, so you may not need to shampoo as often. But if you see flakes in your hair, you may not be shampooing enough. This can lead to dandruff and other scalp diseases.</string>
    <string name="h6">2. Concentrate shampoo on the scalp: When washing your hair, concentrate on cleaning primarily the scalp, rather than washing the entire length of hair. Washing only your hair can create flyaway hair that is dull and coarse.</string>
    <string name="h7">3. Use conditioner after every shampoo: Unless you use a “2-in-1” shampoo, which cleans and conditions hair. Using a conditioner can significantly improve the look of damaged or weathered hair by increasing shine, decreasing static electricity, improving strength and offering some protection from harmful UV rays.</string>
    <string name="h8">4. Concentrate conditioner on the tips of the hair: Because conditioners can make fine hair look limp, they only should be used on the tips of the hair and not on the scalp or length of the hair.</string>
    <string name="h9">5. Choose a shampoo and conditioner formulated specifically for your hair type. For example, if you color your hair, use a shampoo designed for color-treated hair. If your hair is damaged or chemically treated, consider a “2-in-1” shampoo. Regardless of cost, many shampoo and conditioner brands provide the same benefits.</string>
    <string name="h10">6. Protect hair when swimming. Protect your hair from the damaging effects of chlorine by wetting and conditioning your hair before swimming. Wear a tight-fitting swim cap and use a specially formulated swimmers shampoo and deep conditioner after swimming to replace lost moisture.</string>
    <string name="h11">If you have questions about caring for your hair, you should make an appointment to see a board-certified dermatologist.</string>
    <string name="n1">Top 10 Natural Beauty Tips</string>
    <string name="n2">1. Natural Salicylic Acid Exfoliation</string>
</resources>