<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="155dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawableLeft="@drawable/baseline_email_24"
            android:padding="10dp"
            android:paddingTop="40dp"
            android:text="@string/Email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:inputType="textEmailAddress"
            android:hint="Enter Valid Email" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aclonica"
            android:padding="10dp"
            android:paddingTop="40dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:ems="10"
            android:inputType="textPassword"
            android:drawableRight="@drawable/baseline_visibility_off_24"
            android:hint="Enter Valid Password Here"/>

        <TextView
            android:id="@+id/txtfp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:fontFamily="@font/aclonica"
            android:text="@string/fp"
            android:textColor="#C62828"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:fontFamily="@font/aclonica"
            android:layout_gravity="center"
            android:text="@string/signin" />

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dha"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/aclonica"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textColor="#283593"
            android:fontFamily="@font/aclonica"
            android:textSize="18sp"
            android:textStyle="bold" />



    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>