<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ic1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tuab"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/add"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/bname"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_babyname"
            android:layout_width="346dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/textView54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="57dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/bsex"
            android:textSize="20sp"/>


        <EditText
            android:id="@+id/txt_babysex"
            android:layout_width="346dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="57dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/bdob"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txt_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="date" />


        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:layout_marginTop="106dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/done"
            android:layout_gravity="right"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>