<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bf17">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F1408E"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Skin Care Tips"
        app:titleTextColor="@color/white"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.0">

                        <pl.droidsonroids.gif.GifImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/beau"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="5.0dp"
                        android:text="@string/sc1"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="5.0dp"
                        android:text="@string/sc2"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="5.0dp"
                        android:text="@string/sc3"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="5.0dp"
                        android:text="@string/sc4"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="5.0dp"
                        android:text="@string/sc5"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:padding="5.0dp"
                        android:text="@string/sc6"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:padding="5.0dp"
                        android:text="@string/sc7"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:padding="5.0dp"
                        android:text="@string/sc8"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:padding="5.0dp"
                        android:text="@string/sc9"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:padding="5.0dp"
                        android:text="@string/sc10"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="5.0dp"
                        android:text="@string/sc11"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="5.0dp"
                        android:text="@string/sc12"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="5.0dp"
                        android:text="@string/sc13"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aleo_light"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="5.0dp"
                        android:text="@string/sc14"
                        android:textColor="#ff000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>



        </ScrollView>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>